--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,13 @@ body {
     flex-direction: column;
 }
 
+/* For screens with a width less than 768px (mobile screens) */
+@media (max-width: 767px) {
+    .faq-container {
+        width: 50%;
+    }
+}
+
 .faq-container-header {
     width: auto;
     display: flex;
